Bug 372764 - Closed accounts not shown in KF5
Summary: Closed accounts not shown in KF5
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-21 22:20 UTC by allan
Modified: 2017-07-01 11:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description allan 2016-11-21 22:20:47 UTC
Accounts view doesn't show closed accounts, but they are
visible in Institutions view and also in Edit> Find transaction.  This became apparent when I'd imported an investment file but couldn't find the transactions.

'Do not show closed accounts is not checked'. 'Show equity accounts' is checked.  
As the account showed in Institutions view, I reopened the account and it then
showed in Accounts view, but when I closed it again, it disappeared instead of
showing as 'closed'.

This is on Version 4.100.0-64d8749.
Comment 1 Thomas Baumgart 2016-12-03 09:25:59 UTC
Git commit 2cb0208c16f51caaec41d46760cc34912df2fdb2 by Thomas Baumgart.
Committed on 03/12/2016 at 09:23.
Pushed by tbaumgart into branch 'master'.

Fix display of closed accounts in views

Some of the required code never got executed due to some recent changes.

M  +0    -15   kmymoney/views/kaccountsview.cpp
M  +0    -4    kmymoney/views/kaccountsview.h

https://commits.kde.org/kmymoney/2cb0208c16f51caaec41d46760cc34912df2fdb2