Fix display of closed accounts in views

Some of the required code never got executed due to some recent changes.

BUG: 372764